--- a/app/templates/elements/elementDashboard.html
+++ b/app/templates/elements/elementDashboard.html
@@ -67,10 +67,10 @@
                         elementId = element.ElementId, eventFrameTemplateId = eventFrameTemplate.EventFrameTemplateId) }}">
                         <span class="glyphicon glyphicon-plus"></span></a></td>
                     {% if firstEventFrame %}
-                        <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
+                        <td><a class = "btn btn-default" title = "Edit"
                             href = "{{ url_for("eventFrames.editEventFrame", eventFrameId = firstEventFrame.EventFrameId) }}">
                             <span class="glyphicon glyphicon-edit"></span></a></td>
-                        <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete"
+                        <td><a class = "btn btn-default" title = "Delete"
                             href = "{{ url_for("eventFrames.deleteEventFrame", eventFrameId = firstEventFrame.EventFrameId) }}">
                             <span class="glyphicon glyphicon-trash"></span></a></td>
                     {% else %}
@@ -93,7 +93,8 @@
                 <th>Unit</th>
                 <th>New Value</th>
                 <th>New Timestamp</th>
-                <th><button class = "btn btn-default" id = "buttonAttributesSaveAll" title = "Save All"><span class="glyphicon glyphicon-floppy-disk"></span></button></th>
+                <th><button class = "btn btn-default" id = "buttonAttributesSaveAll" title = "Save All"><span class="glyphicon glyphicon-floppy-disk"></span>
+                    </button></th>
                 <th></th>
                 <th></th>
                 <th></th>
@@ -102,15 +103,15 @@
         <tbody>
             {% for elementAttribute in elementAttributes %}
                 <tr>
-                    <td><a class = "btn btn-default" data-toggle = "tooltip" title = "List Values"
-                        href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId,
+                    <td><a class = "btn btn-default" title = "List Values" href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId,
                         elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                     <td>{{ elementAttribute.AttributeTemplate.Name }}</td>
                     {% if elementAttribute.Tag.TagValues[0] %}
                         {% set firstTagValue = elementAttribute.Tag.TagValues | sort(attribute = "Timestamp", reverse = True) | first %}
                         <td id = "tdLastTimestamp{{ elementAttribute.ElementAttributeId }}">{{ firstTagValue.Timestamp }}</td>
                         {% if elementAttribute.Tag.LookupId %}
-                            <td id = "tdLastValue{{ elementAttribute.ElementAttributeId }}">{{ elementAttribute.Tag.Lookup.LookupValues | selectattr("Value", "equalto", firstTagValue.Value) | map(attribute = "Name") | list | first }}          
+                            <td id = "tdLastValue{{ elementAttribute.ElementAttributeId }}">{{ elementAttribute.Tag.Lookup.LookupValues | 
+                                    selectattr("Value", "equalto", firstTagValue.Value) | map(attribute = "Name") | list | first }}          
                             <td>{{ elementAttribute.Tag.Lookup.Name }}</td>
                         {% else %}
                             <td id = "tdLastValue{{ elementAttribute.ElementAttributeId }}">{{ firstTagValue.Value }}</td>                    
@@ -151,10 +152,10 @@
                     </td>
                     <td></td>
                     {% if elementAttribute.Tag.TagValues[0] %}
-                        <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Notes"
+                        <td><a class = "btn btn-default" title = "Last Value Notes"
                             href = "{{ url_for("tagValues.listTagValueNotes", tagValueId = firstTagValue.TagValueId,
                             elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class="glyphicon glyphicon-comment"></span></a></td>
-                        <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit"
+                        <td><a class = "btn btn-default" title = "Edit Last Value"
                             href = "{{ url_for("elementAttributes.editElementAttributeValue", elementId = elementAttribute.ElementId,
                             tagValueId = firstTagValue.TagValueId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
                         <td><a class = "btn btn-default" title = "Delete Last Value"
