--- a/app/templates/eventFrameTemplates/selectEventFrameTemplate.html
+++ b/app/templates/eventFrameTemplates/selectEventFrameTemplate.html
@@ -89,9 +89,9 @@ Event Frame Templates
                             <td></td>
                         {% endif %}
                         {% if className == "EventFrameTemplate" or className == None %}
-                            <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
+                            <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
                                 eventFrameTemplateId = child.id()) }}"><span class="glyphicon glyphicon-edit"></a></td>
-                            <td><a class = "btn btn-default" data-toggle = "tooltip" title = "Delete" href = "{{ url_for("eventFrameTemplates.deleteEventFrameTemplate",
+                            <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameTemplates.deleteEventFrameTemplate",
                                 eventFrameTemplateId = child.id()) }}"><span class="glyphicon glyphicon-trash"></a></td>
                         {% else %}
                             <td></td>
