--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,9 +38,10 @@
                     </li>
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Templates <span class="caret"></span></a>
                         <ul class = "dropdown-menu">
-                            <li><a href = "{{ url_for("elementAttributeTemplates.listElementAttributeTemplates") }}">Attributes</a></li>
                             <li><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Elements</a></li>
+                            <li><a href = "{{ url_for("elementAttributeTemplates.listElementAttributeTemplates") }}">Element Attributes</a></li>
                             <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate") }}">Event Frames</a></li>
+                            <li><a href = "{{ url_for("eventFrameAttributeTemplates.listEventFrameAttributeTemplates") }}">Event Frame Attributes</a></li>
                         </ul>
                     </li>
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements <span class="caret"></span></a>
