--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -81,11 +81,11 @@ Data Entry - Event Frames
                         {% else %}
                             {% set name = child.Name %}
                         {% endif %}
-                        {% if childrenClass == "EventFrameTemplate" %}
+                        {% if childrenClass == "EventFrame" %}
+                            <td><a class = "btn btn-default" title = "Select" href = "#"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
+                        {% elif childrenClass == "EventFrameTemplate" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.select", selectedClass = "EventFrame",
                                 selectedId = child.id(), elementId = parent.id()) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
-                        {% elif childrenClass == "EventFrame" %}
-                            <td><a class = "btn btn-default" title = "Select" href = "#"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
                         {% else %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.select", selectedClass = child.__class__.__name__,
                                 selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
@@ -100,24 +100,22 @@ Data Entry - Event Frames
 
 {% block scripts %}
     {{ super() }}
-    <!-- <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
+    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
     <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
     <script>
         $('#table').DataTable
         ({
             "order":
             [
-                [1, 'asc']              // Name.
+                [0, 'asc']              // Name.
             ],
             "columns":
             [
-                { "orderable": false }, // Details button.
-                null,
                 null
             ],
             "stateSave": true,
             "stateDuration": 0,
             "pageLength": 25
-        }); -->
+        });
     </script>
 {% endblock %}
