--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -70,6 +70,8 @@ Data Entry - Event Frames
         <thead>
             <tr>
                 <th>{{ tableHeader }}</th>
+                <th>Start Timestamp</th>
+                <th>End Timestamp</th>
             </tr>
         </thead>
         <tbody>
@@ -82,7 +84,8 @@ Data Entry - Event Frames
                             {% set name = child.Name %}
                         {% endif %}
                         {% if childrenClass == "EventFrame" %}
-                            <td><a class = "btn btn-default" title = "Select" href = "#"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
+                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.dashboard", eventFrameId = child.id(),
+                                selectedEventFrameTemplateId = child.EventFrameTemplateId) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
                         {% elif childrenClass == "EventFrameTemplate" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.select", selectedClass = "EventFrame",
                                 selectedId = child.id(), elementId = parent.id()) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
@@ -90,6 +93,8 @@ Data Entry - Event Frames
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.select", selectedClass = child.__class__.__name__,
                                 selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
                         {% endif %}
+                        <td>{{ child.StartTimestamp }}</td>
+                        <td>{{ child.EndTimestamp }}</td>
                     </tr>
                 {% endfor %}
             {% endif %}
@@ -107,10 +112,12 @@ Data Entry - Event Frames
         ({
             "order":
             [
-                [0, 'asc']              // Name.
+                [1, 'desc']              // Start timestamp.
             ],
             "columns":
             [
+                null,
+                null,
                 null
             ],
             "stateSave": true,
