--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,6 +55,7 @@
                         <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Raspberry Pi <span class="caret"></span></a>
                             <ul class = "dropdown-menu">
                                 <li><a href = "{{ url_for("raspberryPiUtilities.backupDatabase") }}">Backup Database</a></li>
+                                <li><a href = "{{ url_for("raspberryPiUtilities.info") }}">Info</a></li>
                                 <li><a href = "{{ url_for("raspberryPiUtilities.reboot") }}">Reboot</a></li>
                                 <li><a href = "{{ url_for("raspberryPiUtilities.shutdown") }}">Shutdown</a></li>
                             </ul>
