--- a/app/templates/raspberryPiUtilities/info.html
+++ b/app/templates/raspberryPiUtilities/info.html
@@ -10,7 +10,7 @@ Raspberry Pi - Info
 </div>
 <div class = "panel panel-primary">
     <div class = "panel-heading">Network</div>
-    <div class = "panel-body">{{ ifconfigOutput | safe }}</div>
+    <div class = "panel-body">{{ ipOutput | safe }}</div>
 </div>
 <div class = "panel = panel-primary">
     <div class = "panel-heading">Uptime</div>
