--- a/app/templates/raspberryPiUtilities/info.html
+++ b/app/templates/raspberryPiUtilities/info.html
@@ -9,6 +9,10 @@ Raspberry Pi - Info
     <h1>Raspberry Pi <small>Info</small></h1>
 </div>
 <div class = "panel panel-primary">
+    <div class = "panel-heading">Memory</div>
+    <div class = "panel-body">{{ freeOutput | safe }}</div>
+</div>
+<div class = "panel panel-primary">
     <div class = "panel-heading">Network</div>
     <div class = "panel-body">{{ ipOutput | safe }}</div>
 </div>
