--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,6 +57,7 @@
                                 <li><a href = "{{ url_for("raspberryPiUtilities.backupDatabase") }}">Backup Database</a></li>
                                 <li><a href = "{{ url_for("raspberryPiUtilities.info") }}">Info</a></li>
                                 <li><a href = "{{ url_for("raspberryPiUtilities.reboot") }}">Reboot</a></li>
+                                <li><a href = "{{ url_for("raspberryPiUtilities.restoreDatabase") }}">Restore Database</a></li>
                                 <li><a href = "{{ url_for("raspberryPiUtilities.shutdown") }}">Shutdown</a></li>
                             </ul>
                         </li>
